# evaluatePython

./: CLAUDE.md  Dockerfile  README.md  config.json  pyproject.toml
.github/workflows/: staging-deploy.yml  test-lint.yml
docs/: dev.md  user.md
evaluation_function/: dev.py  evaluation.py  evaluation_test.py  preview.py  preview_test.py
postman/: evaluatePython.postman_collection.json
