[tool.poetry]
name = "evaluation_function"
version = "0.0.1"
description = ""
authors = ["Andreas Pfurtscheller <andreas.pfurtscheller23@ic.ac.uk>"]
readme = "README.md"
packages = [{ include = "evaluation_function" }]

[tool.poetry.scripts]
evaluation_function = "evaluation_function.main:main"
evaluation_function_dev = "evaluation_function.dev:dev"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
typing_extensions = "^4.12.2"
lf_toolkit = { git = "https://github.com/lambda-feedback/toolkit-python.git", branch = "main", extras = [
    "ipc",
] }
numpy = ">=1.24"
pandas = ">=2.0"
matplotlib = ">=3.7"
scipy = ">=1.10"
seaborn = ">=0.13"
statsmodels = ">=0.14"
requests = ">=2.32"
boto3 = ">=1.42"
python-dotenv = ">=1.0"
hypothesis = "^6.152.9"
pycodestyle = ">=2.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
